# genetools

./: .gitignore  CLAUDE.md  Data.py  README.md  Untitled1.ipynb  __init__.py  compat.py  contours.py  data.py  geometry.py  nrg.py  params.py  pyproject.toml  requirements.txt  shearingrate.py  spectra.py  test_genetools.py  utils.py
diagnostics/: __init__.py  _base.py  contours.py  fluxes2d.py  nrg.py  profiles.py  shearingrate.py  spectra.py  spectra_global.py
io/: __init__.py  _zgrid.py  coordinates.py  data.py  geometry.py  params.py  profiles_loader.py  utils.py
tests/: conftest.py
tests/diagnostics/: test_contours.py  test_fluxes2d.py  test_nrg.py  test_profiles.py  test_shearingrate.py  test_spectra.py  test_spectra_global.py
tests/io/: test_coordinates.py  test_data.py  test_geometry.py  test_params.py  test_profiles_loader.py  test_utils.py
